[gd_scene load_steps=2 format=3 uid="uid://3fxfjajfplk3"]

[ext_resource type="Script" path="res://app.gd" id="1_4d0qo"]

[node name="App" type="Node2D"]
script = ExtResource("1_4d0qo")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AsepriteExeLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 25.0
offset_top = 26.0
offset_right = 136.0
offset_bottom = 69.0
theme_override_font_sizes/font_size = 14
text = "Aseprite .exe
Location"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AsepriteExeLabel2" type="Label" parent="Control"]
layout_mode = 0
offset_left = 856.0
offset_top = 117.0
offset_right = 967.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 14
text = "Column Count"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OutputFolderLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 477.0
offset_right = 143.0
offset_bottom = 517.0
theme_override_font_sizes/font_size = 14
text = "Output Folder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FileNameLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 44.0
offset_top = 529.0
offset_right = 155.0
offset_bottom = 569.0
theme_override_font_sizes/font_size = 14
text = "File Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FileNameExtLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 439.0
offset_top = 533.0
offset_right = 550.0
offset_bottom = 573.0
theme_override_font_sizes/font_size = 18
text = ".png"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AsepriteLocation" type="TextEdit" parent="Control"]
layout_mode = 0
offset_left = 135.0
offset_top = 24.0
offset_right = 461.0
offset_bottom = 70.0

[node name="AspriteButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 468.0
offset_top = 29.0
offset_right = 614.0
offset_bottom = 66.0
text = "Find Aseprite .exe"
icon_alignment = 1

[node name="ItemList" type="ItemList" parent="Control"]
layout_mode = 0
offset_left = 57.0
offset_top = 115.0
offset_right = 847.0
offset_bottom = 455.0
allow_reselect = true
allow_rmb_select = true

[node name="Up" type="Button" parent="Control"]
layout_mode = 0
offset_left = 58.0
offset_top = 79.0
offset_right = 111.0
offset_bottom = 110.0
text = "Up"

[node name="Down" type="Button" parent="Control"]
layout_mode = 0
offset_left = 116.0
offset_top = 79.0
offset_right = 169.0
offset_bottom = 110.0
text = "Down
"

[node name="Delete" type="Button" parent="Control"]
layout_mode = 0
offset_left = 176.0
offset_top = 79.0
offset_right = 235.0
offset_bottom = 110.0
text = "Delete
"

[node name="Find Sprites" type="Button" parent="Control"]
layout_mode = 0
offset_left = 241.0
offset_top = 79.0
offset_right = 340.0
offset_bottom = 110.0
text = "Find Sprites
"

[node name="outputpath" type="TextEdit" parent="Control"]
layout_mode = 0
offset_left = 142.0
offset_top = 478.0
offset_right = 468.0
offset_bottom = 515.0

[node name="outputPathButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 478.0
offset_top = 477.0
offset_right = 596.0
offset_bottom = 514.0
text = "Select Directory
"
icon_alignment = 1

[node name="Filename" type="TextEdit" parent="Control"]
layout_mode = 0
offset_left = 143.0
offset_top = 530.0
offset_right = 469.0
offset_bottom = 568.0
text = "Output"

[node name="GenerateButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 143.0
offset_top = 581.0
offset_right = 467.0
offset_bottom = 618.0
text = "Generate Packed Sprite Sheet"
icon_alignment = 1

[node name="ColumnCount" type="TextEdit" parent="Control"]
layout_mode = 0
offset_left = 971.0
offset_top = 117.0
offset_right = 1071.0
offset_bottom = 161.0

[node name="exe_selector" type="FileDialog" parent="."]
size = Vector2i(392, 159)
use_native_dialog = true

[node name="output_directory_selector" type="FileDialog" parent="."]
size = Vector2i(392, 159)
use_native_dialog = true

[node name="sprite_file_selector" type="FileDialog" parent="."]
size = Vector2i(392, 159)
use_native_dialog = true

[connection signal="pressed" from="Control/AspriteButton" to="." method="_on_asprite_button_pressed"]
[connection signal="pressed" from="Control/Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Control/Down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="Control/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="Control/Find Sprites" to="." method="_on_sprite_button_pressed"]
[connection signal="pressed" from="Control/outputPathButton" to="." method="_on_output_path_button_pressed"]
[connection signal="pressed" from="Control/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="text_changed" from="Control/ColumnCount" to="." method="_on_column_count_text_changed"]
